err/cl-utils.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cl_utils'...
Listing './lib/python3.5/site-packages/cl_utils/decorators'...
Compiling './lib/python3.5/site-packages/cl_utils/decorators/permissions.py'...
***   File "./lib/python3.5/site-packages/cl_utils/decorators/permissions.py", line 13
    print perm
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/cl_utils/django_patches'...
Listing './lib/python3.5/site-packages/cl_utils/fields'...
Compiling './lib/python3.5/site-packages/cl_utils/fields/json_fields.py'...
***   File "./lib/python3.5/site-packages/cl_utils/fields/json_fields.py", line 25
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cl_utils/inline_edit'...
Listing './lib/python3.5/site-packages/cl_utils/inline_edit/templates'...
Listing './lib/python3.5/site-packages/cl_utils/inline_edit/templates/inline-edit'...
Listing './lib/python3.5/site-packages/cl_utils/inline_edit/templatetags'...
Listing './lib/python3.5/site-packages/cl_utils/static'...
Listing './lib/python3.5/site-packages/cl_utils/static/common'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports/css'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports/img'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports/img/datepicker'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports/img/modybox'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/advanced_reports/js'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/css'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/img'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/img/modybox'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/js'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/pdf_fonts'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/pdf_img'...
Listing './lib/python3.5/site-packages/cl_utils/static/common/swf'...
Listing './lib/python3.5/site-packages/cl_utils/templates'...
Listing './lib/python3.5/site-packages/cl_utils/templatetags'...
Compiling './lib/python3.5/site-packages/cl_utils/templatetags/highlighting_utils.py'...
***   File "./lib/python3.5/site-packages/cl_utils/templatetags/highlighting_utils.py", line 118
    except VariableDoesNotExist, e:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cl_utils/templatetags/include_tag.py'...
***   File "./lib/python3.5/site-packages/cl_utils/templatetags/include_tag.py", line 44
    except TemplateSyntaxError, e:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cl_utils/templatetags/language.py'...
***   File "./lib/python3.5/site-packages/cl_utils/templatetags/language.py", line 46
    raise TemplateSyntaxError, "{% language 'en' %} requires exactly one parameter "
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/cl_utils/templatetags/user_input.py'...
***   File "./lib/python3.5/site-packages/cl_utils/templatetags/user_input.py", line 45
    cleaned = re.sub(ur'<!--([^-]|-(?!-)|--(?!>))*-->', u'', cleaned)
                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cl_utils-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
